--- a/gb/ncid280_3.md
+++ b/gb/ncid280_3.md
@@ -23,7 +23,7 @@
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/11/16/n11659501.md#1" target="_blank">北京医院疑爆发鼠疫 医生曝已有多人感染</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/11/16/n11659501.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/978451ccdbaf6f7c0fc58ca9e587cf90-150x120.jpg" align ="left"></a>最近北京确诊两例肺鼠疫，同时官方严密封锁消息。但据北京医生透露，已有多人感染，并传有人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 11:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/11/15/n11658070.md#1" target="_blank">死伤数百人 江苏响水“3·21”爆炸出调查报告</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/11/15/n11658070.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/GettyImages-1131960651-3-150x120.jpg" align ="left"></a>今日（11月15日），中共官方公布江苏响水天嘉宜化工有限公司“3·21”特别重大爆炸事故调查报告。同时，中共江苏省委常委、常务副省长樊金龙和副省长费高云被问责。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 7:33 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/11/15/n11657783.md#1" target="_blank">中国化工企业今年已减少1700家</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/11/15/n11657783.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/GettyImages-1131960651-3-150x120.jpg" align ="left"></a>据中国石油和化学工业联合会调研统计数字显示，截至今年9月底，中国化工企业已减少约1,700家。而据中商产业研究院监测数据，截至2018年底，中国化工行业企业共计23,513家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 3:53 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/3/n11696856.md#1" target="_blank">张家口4分钟内两次地震 北京居民有震感</a><br></h3>12月3日，河北张家口市怀安县连续发生两次地震，一次2.9级，一次3.4级。不少北京网民表示有震感。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 1:44 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/11/14/n11656490.md#1" target="_blank">传北京儿童医院、宣武医院出现鼠疫病例</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/11/14/n11656490.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1280px-Yersinia_pestis_fluorescent-150x120.jpg" align ="left"></a>继来自内蒙古的两例鼠疫确诊患者引发关注后，14日上午，网上疯传北京儿童医院、宣武医院发现鼠疫患者的消息。北京当局紧急“辟谣”，称未出现新发病例，民众则不满消息被封杀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 5:33 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/3/n11696472.md#1" target="_blank">北京顺义一厂房发生爆炸 已致1死11伤</a><br></h3>今天（3日）凌晨，北京顺义区牛栏山镇有工厂发生爆炸，事故造成11人送医救治、2人失联、1人死亡，目前正调查爆炸原因。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 9:41 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/2/n11694762.md#1" target="_blank">河南邓州拆除老电视塔 砸死1人致2伤</a><br></h3>12月2日上午11时18分左右，河南南阳邓州市老广播电视塔在拆除作业过程中，几十米长的起重机臂突然断裂，导致1死2伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 4:59 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/11/27/n11683629.md#1" target="_blank">云南一高速路在建隧道口坍塌 4死8被困</a><br></h3>11月26日晚上，云南临沧市凤庆县云凤高速公路第二合同段安石隧道出口坍塌。截至27日上午9时，救出14人，其中4人死亡10人受伤，还有8人仍被困。
