--- a/gb/ncid280_5.md
+++ b/gb/ncid280_5.md
@@ -21,6 +21,7 @@
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/9/6/n11503759.md#1" target="_blank">世卫：中国有全球最大的丙型肝炎问题</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/9/6/n11503759.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-134277425-150x120.jpg" align ="left"></a>世界卫生组织（WHO）指出，中国大陆正面临丙型肝炎疫情，如果患者不加以治疗，可导致肝硬化、肝癌和早逝的传染病，其中以农村地区的影响尤为严重。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月07日 12:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/9/3/n11495861.md#1" target="_blank">肉价涨 中共取消生猪禁养令 养殖户怎么看？</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/9/3/n11495861.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/070150cc2a37815d5422dd92a15787e4-600x400-150x120.jpg" align ="left"></a>近两年来，由于受到环保高压、非洲猪瘟疫情持续的影响，大部分养殖场被迫关闭，市场无猪可养、无猪可卖，全国猪肉告急，各地猪肉价格持续飙涨达历史高点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 5:49 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/9/2/n11494648.md#1" target="_blank">上游水库无警示放水 黄果树景区频发惨剧</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/9/2/n11494648.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/VCG11489148778-150x120.jpg" align ="left"></a>“一切看起来都很安全。”北京赵先生10岁的儿子，沿着黄果树景区行人路线旁游人踩出的小路去河边洗手，不幸被水冲走，由于水流湍急家人营救未果，还造成一对母子罹难一人重伤的惨剧。人们不禁要问，景区这么大的水是从哪里来的？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 7:35 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/10/13/n11585071.md#1" target="_blank">江苏无锡一小吃店爆炸 已致9死10伤</a><br></h3>江苏省无锡市接连发生灾难性事故。10月13日上午11时许，无锡锡山区鹅湖镇新杨路一小吃店发生燃气爆炸。官方称，目前共有15名受伤人员送医，其中6人抢救无效死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月13日 8:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/10/3/n11565381.md#1" target="_blank">浓雾天气 安徽17车连环相撞 至少10人死</a><br></h3>10月3日上午6时40分，因浓雾天气，安徽宁洛高速公路蚌埠段往南京方向196公里处，发生4宗连环车祸，17车相撞，导致10死7伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月03日 8:23 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/9/25/n11546125.md#1" target="_blank">河南艾滋血祸揭露者王淑平在美国去世</a><br></h3>9月21日，王淑平医生与丈夫、朋友在美国犹他州盐湖城郊游时，不幸心脏病突发去世，年仅59周岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月26日 12:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/9/22/n11538408.md#1" target="_blank">湖南大货车冲入集市人群 至少10死16伤</a><br></h3>湖南湘潭市9月22日一早发生严重车祸，一辆货车撞向赶集的人群，多人被卷至车底。截止大纪元发稿，事故造成至少10死16伤。
@@ -32,6 +33,5 @@
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/9/5/n11501182.md#1" target="_blank">云南巧家县山泥滑坡致9死 最小者仅4岁</a><br></h3>9月5日凌晨4时许，云南昭通市巧家县小河镇马鞍村，因受强降雨影响，发生山泥滑坡，导致9人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月05日 9:21 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/9/4/n11497860.md#1" target="_blank">23名大陆游客新西兰遇车祸 6死17伤</a><br></h3>当地时间9月4日早上11点20分，新西兰北岛一辆载有23名中国旅客的旅游巴在著名旅游胜地罗托鲁瓦（Rotorua）附近的公路行驶时翻侧，造成6死17伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月04日 4:16 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/9/2/n11493170.md#1" target="_blank">开学日 湖北恩施一小学发生砍人案8死2伤</a><br></h3>9月2日是大陆学生开学日，湖北恩施发生学生被斩事件。官方称，目前凶案已造成10名学生受伤，但网上的消息称，已经有8人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月02日 10:18 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/8/29/n11484684.md#1" target="_blank">海南儋州市那大镇突发龙卷风 至少8死2伤</a><br></h3>8月29日凌晨3时半左右，海南儋州市市区中兴大街与工业路交叉口附近区域突发龙卷风，导致那大镇两处工地宿舍倒塌，8人死亡，2人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月29日 12:36 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/ncid280_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/ncid280.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/ncid280_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/ncid280_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/ncid280_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/ncid280_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/ncid280_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/ncid280_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/ncid280_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/ncid280_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/ncid280_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/dueiwa2503/djy/blob/master/gb/ncid280_5.md#1<br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/ncid280_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dueiwa2503/djy/blob/master/gb/ncid280_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid280_5.htm">http://www.epochtimes.com/gb/ncid280_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
